ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Generics/parserConstructorAmbiguity3/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Generics/parserConstructorAmbiguity3/input.ts:1:11
  |
1 | new Date<A>
  |           ^

